# xdispatch2

./: .clang-format  .clang-tidy  .drone.yml  .gitignore  .gitmodules  .license-tools-config.json  .pre-commit-config.yaml  CMakeLists.txt  README.md  conan_package_create.sh  conan_package_test.sh  conanfile.py  config.h.in
.gitea/workflows/: checks.yaml  release-tag.yaml
include/xdispatch/: backend.h  backend_libdispatch.h  backend_naive.h  backend_naive_ithread.h  backend_naive_ithreadpool.h  backend_qt.h  barrier_operation.h  cancelable.h  dispatch  dispatch.h  dispatch_decl.h  group.h  ibackend.h  igroup_impl.h  iqueue_impl.h  isocket_notifier_impl.h  ithread.h  ithreadpool.h  itimer_impl.h  operation.h  platform.h  queue.h  signals.h  signals_barrier.h  socket_notifier.h  thread_utils.h  timer.h  waitable_queue.h
include/xdispatch/impl/: cancelable.h  ibackend.h  igroup_impl.h  iqueue_impl.h  isocket_notifier_impl.h  itimer_impl.h  lightweight_barrier.h
src/: backend.cpp  barrier_operation.cpp  cancelable.cpp  group.cpp  lightweight_barrier.cpp  operation.cpp  queue.cpp  signals.cpp  socket_notifier.cpp  symbol_utils.h  thread_utils.cpp  thread_utils.h  timer.cpp  trace_utils.cpp  trace_utils.h  waitable_queue.cpp  xdispatch_internal.h
src/libdispatch/: backend_internal.h  execution.cpp  execution.h  group.cpp  libdispatch_backend.cpp  libdispatch_backend_internal.h  libdispatch_execution.cpp  libdispatch_execution.h  libdispatch_group.cpp  libdispatch_queue.cpp  libdispatch_socket_notifier.cpp  libdispatch_timer.cpp  queue.cpp  timer.cpp
src/naive/: backend_internal.h  consumable.cpp  consumable.h  group.cpp  manual_thread.cpp  manual_thread.h  naive_backend.cpp  naive_backend_internal.h  naive_concurrentqueue.h  naive_consumable.cpp  naive_consumable.h  naive_external_thread.cpp  naive_external_thread.h  naive_group.cpp  naive_inverse_lockguard.h  naive_manual_thread.cpp  naive_manual_thread.h  naive_operation_manager.cpp  naive_operation_manager.h  naive_operation_queue.cpp  naive_operation_queue.h  naive_operation_queue_manager.cpp  naive_operation_queue_manager.h  naive_operations.cpp  naive_operations.h  naive_parallel_queue.cpp  naive_pooled_thread.cpp  naive_pooled_thread.h  naive_semaphore.cpp  naive_semaphore.h  naive_serial_queue.cpp  naive_socket_notifier.cpp  naive_thread.cpp  naive_thread.h  naive_threadpool.cpp  naive_threadpool.h  naive_timer.cpp  naive_trace.cpp  naive_trace.h  operation_manager.cpp  (+8 more)
src/qt5/: backend_internal.h  fallback_qt5_backend.cpp  group.cpp  parallel_queue.cpp  qt5_backend.cpp  qt5_backend_internal.h  qt5_group.cpp  qt5_parallel_queue.cpp  qt5_serial_queue.cpp  qt5_signals.cpp  qt5_signals.h  qt5_socket_notifier.cpp  qt5_threadpool.cpp  qt5_threadpool.h  qt5_timer.cpp  serial_queue.cpp  timer.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp  test_package_qt5.cpp
tests/: .clang-tidy  CMakeLists.txt  cxx_benchmark.cpp  cxx_dispatch_cascade_lambda.cpp  cxx_dispatch_fibo.cpp  cxx_dispatch_group.cpp  cxx_dispatch_group_lambda.cpp  cxx_dispatch_mainqueue.cpp  cxx_dispatch_priority.cpp  cxx_dispatch_queue_lambda.cpp  cxx_dispatch_serialqueue_lambda.cpp  cxx_dispatch_socket_notifier.cpp  cxx_dispatch_timer.cpp  cxx_free_lambda.cpp  cxx_is_current.cpp  cxx_tests.cpp  cxx_tests.h  cxx_waitable_queue.cpp  demo.cpp  main.cpp  main_ios.cpp  platform_socketpair.h  platform_tests.cpp  platform_tests.h  qt_tests.cpp  qt_tests.h  signal_tests.cpp  signal_tests.h  stopwatch.h  tests.rc  xdispatch2_benchmarks.sh  xdispatch_tests.manifest
tests/munit/: CMakeLists.txt  MUnit.h  MUnit_assert.h  MUnit_cxx.h  MUnit_runner.h  MUnit_tools.h  assert.c  discover_tests.cmake  discover_tests_script.cmake  list.c  list.h  private.h  runner.c  tools.c  typedefs.h
